force-app/main/default/objects/cazoomi__Campaign_Member_History__c/cazoomi__Campaign_Member_History__c.object-meta.xml
<CustomObject>
    <label>Campaign Member History</label>
    <nameField>
        <displayFormat>CM-{00000}</displayFormat>
        <label>Campaign Member History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campaign Member History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>