force-app/main/default/objects/cazoomi__Campaign_Member_History__c/fields/cazoomi__Campaign__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campaign Member History</relationshipLabel>
    <relationshipName>Campaign_Member_History</relationshipName>
    <type>Lookup</type>
</CustomField>