force-app/main/default/objects/cazoomi__Campaign_Member_History__c/fields/cazoomi__Deletion_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__Deletion_Timestamp__c</fullName>
    <label>Deletion Timestamp</label>
    <type>DateTime</type>
</CustomField>