force-app/main/default/objects/cazoomi__Campaign_Member_History__c/fields/cazoomi__Email__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__Email__c</fullName>
    <label>Email</label>
    <type>Email</type>
</CustomField>