force-app/main/default/objects/cazoomi__Campaign_Member_History__c/fields/cazoomi__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__Object_Id__c</fullName>
    <label>Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>