force-app/main/default/objects/cazoomi__Campaign_Member_History__c/fields/cazoomi__Object_Type__c.field-meta.xml
<CustomField>
    <fullName>cazoomi__Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>